--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ button {
 
 .info {
     padding: 40px 100px;
+    padding-bottom: 80px;
 }
 
 .info-header {
@@ -129,7 +130,7 @@ button {
     font-weight: 100;
     font-style: italic;
     color: #1f2937;
-    width: 780px;
+    max-width: 780px;
 }
 
 .quoter {
@@ -137,4 +138,43 @@ button {
     font-weight: bold;
     text-align: right;
     width: 700px;
+}
+
+.sign-up {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 100px;
+}
+
+.banner {
+    color: white;
+    background-color: #3882f6;
+    border-radius: 8px;
+    display: flex;
+    padding: 50px 120px;
+    justify-content: space-between;
+    align-items: center;
+    gap: 24px;
+    width: 840px;
+}
+
+.banner-main {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 4px;
+}
+
+.banner button {
+    border: 2px solid white;
+    padding: 8px 28px;
+    flex: none;
+}
+
+.footer {
+    font-size: 18px;
+    padding: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
