Add flex to hero section
Hero section should grow to fill available space

--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex: 1;
     gap: 42px;
     padding: 100px 100px;
 }
